@@ -3,7 +3,9 @@ package com.sorbSoft.CabAcademie.Controllers;
 
 import com.sorbSoft.CabAcademie.Entities.Course;
 import com.sorbSoft.CabAcademie.Entities.Error.MessageResponse;
+import com.sorbSoft.CabAcademie.Entities.LanguageEntity;
 import com.sorbSoft.CabAcademie.Services.CourseService;
+import com.sorbSoft.CabAcademie.Services.Dtos.Validation.Result;
 import com.sorbSoft.CabAcademie.Services.Dtos.ViewModel.CourseViewModel;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.convert.converter.Converter;
@@ -61,9 +63,19 @@ public class CourseController {
         return new ResponseEntity<>(courses, HttpStatus.OK);
     }
 
-    @GetMapping(value={"/{page}/{itemsPerPage}"})
-    public ResponseEntity<Page<Course>> getAllCoursesByPage(@PathVariable int  page, @PathVariable int itemsPerPage){
-        Page<Course> courses = courseService.fetchAllCoursesByPage(page,itemsPerPage);
+    @GetMapping(value = "/subSection/{id}" , consumes = MediaType.APPLICATION_JSON_VALUE)
+    public ResponseEntity<List<Course>> getAllCoursesBySubSection(@PathVariable Long id){
+        List<Course> courses = courseService.fetchCourseBySubSection(id);
+        if(courses.isEmpty())
+            return new ResponseEntity<>(new ArrayList<>(), HttpStatus.OK);
+        return new ResponseEntity<>(courses, HttpStatus.OK);
+    }
+
+    @GetMapping(value = "/subCategory/{id}" , consumes = MediaType.APPLICATION_JSON_VALUE)
+    public ResponseEntity<List<Course>> getAllCoursesBySubCategory(@PathVariable Long id){
+        List<Course> courses = courseService.fetchCourseBySubCategory(id);
+        if(courses.isEmpty())
+            return new ResponseEntity<>(new ArrayList<>(), HttpStatus.OK);
         return new ResponseEntity<>(courses, HttpStatus.OK);
     }
 
@@ -76,110 +88,47 @@ public class CourseController {
      */
 
     @GetMapping(value="/paginate", produces = MediaType.APPLICATION_JSON_VALUE)
-    public ResponseEntity<Page<Course>> getAllCoursesByPageAndSearchText(@RequestParam(value = "count", defaultValue = "10") String count,
-                                                                         @RequestParam(value = "page", defaultValue = "1") String page){
+    public ResponseEntity<Page<Course>> getAllCoursesByPage(@RequestParam(value = "count", defaultValue = "10") String count,
+                                                            @RequestParam(value = "page", defaultValue = "1") String page){
         Page<Course> courses = courseService.fetchAllCoursesByPage(Integer.valueOf(page), Integer.valueOf(count));
-        if (courses.getContent().isEmpty())
-            return new ResponseEntity<>(new Page<Course>() {
-                @Override
-                public int getTotalPages() {
-                    return 0;
-                }
-
-                @Override
-                public long getTotalElements() {
-                    return 0;
-                }
-
-                @Override
-                public <S> Page<S> map(Converter<? super Course, ? extends S> converter) {
-                    return null;
-                }
-
-                @Override
-                public int getNumber() {
-                    return 0;
-                }
-
-                @Override
-                public int getSize() {
-                    return 0;
-                }
-
-                @Override
-                public int getNumberOfElements() {
-                    return 0;
-                }
-
-                @Override
-                public List<Course> getContent() {
-                    return new ArrayList<>();
-                }
-
-                @Override
-                public boolean hasContent() {
-                    return false;
-                }
-
-                @Override
-                public Sort getSort() {
-                    return null;
-                }
-
-                @Override
-                public boolean isFirst() {
-                    return false;
-                }
-
-                @Override
-                public boolean isLast() {
-                    return false;
-                }
-
-                @Override
-                public boolean hasNext() {
-                    return false;
-                }
-
-                @Override
-                public boolean hasPrevious() {
-                    return false;
-                }
-
-                @Override
-                public Pageable nextPageable() {
-                    return null;
-                }
-
-                @Override
-                public Pageable previousPageable() {
-                    return null;
-                }
-
-                @Override
-                public Iterator<Course> iterator() {
-                    return null;
-                }
-            }, HttpStatus.OK);
         return new ResponseEntity<>(courses, HttpStatus.OK);
     }
 
     @PostMapping(value = "/save", consumes = MediaType.APPLICATION_JSON_VALUE)
     public  ResponseEntity<MessageResponse> saveCourse(@Valid @RequestBody CourseViewModel vm){
-        Pair<String, Course> result = courseService.saveCourse(vm);
-        if(result.getSecond() == null)
-            return new ResponseEntity<>(MessageResponse.of(result.getFirst()), HttpStatus.CONFLICT);
-        return  new ResponseEntity<>(MessageResponse.of(result.getFirst()), HttpStatus.OK);
+        Result result = courseService.saveCourse(vm);
+        if(!result.isValid())
+            return new ResponseEntity<>(MessageResponse.of(result.lista.get(0).getMessage()), HttpStatus.CONFLICT);
+        return  new ResponseEntity<>(MessageResponse.of("Course successfully saved"), HttpStatus.OK);
+    }
+
+    @PutMapping(value = "/update")
+    public ResponseEntity<Course> updateCourse(@RequestBody CourseViewModel courseVm){
+
+        //TODO: Validators should be implemenmted as seperate layer
+        if(courseVm == null
+                || courseVm.getId()==null)
+            return  new ResponseEntity<>(HttpStatus.BAD_REQUEST);
+
+        Long id = courseVm.getId();
+        if(!courseService.exists(id))
+            return new ResponseEntity<>(HttpStatus.NOT_FOUND);
+
+
+        Result result = courseService.updateCourse(courseVm);
+
+        if (result == null)
+            return  new ResponseEntity<>(HttpStatus.NOT_MODIFIED);
+
+        return new ResponseEntity(result, HttpStatus.OK);
     }
 
     @DeleteMapping(value = "/{id}")
-    public ResponseEntity<Void> deleteCourse(@PathVariable Long id ){
-        if(id<0)
-            return  new ResponseEntity<>(HttpStatus.BAD_REQUEST);
-        if(courseService.fetchCourse(id)==null)
-            return new ResponseEntity<>(HttpStatus.NOT_FOUND);
-
-        courseService.deleteCourse(id);
-        return new ResponseEntity<>(HttpStatus.OK);
+    public ResponseEntity<MessageResponse> deleteCourse(@PathVariable Long id ){
+        Result result = courseService.deleteCourse(id);
+        if (!result.isValid()){
+            return new ResponseEntity<>(MessageResponse.of(result.lista.get(0).getMessage()), HttpStatus.CONFLICT);
+        }
+        return  new ResponseEntity<>(MessageResponse.of("Section successfully deleted"), HttpStatus.OK);
     }
 }
